# fastapi_p21

./: .gitignore  README.md  TODO  admin.py  config.py  db.py  fkjdshfksdjhf.py  main.py  models.py  pyproject.toml
apps/: admin.py  middlewares.py
apps/models/: __init__.py  custom_types.py  database.py  db.py  products.py  users.py
apps/routers/: __init__.py  auth.py  generate.py  products.py  users.py
apps/utils/: authentication.py
templates/: user-detail.html  user-list.html
templates/apps/auth/: login.html
templates/apps/products/: product-detail.html  product-list.html
templates/apps/users/: profile.html
